--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "sass": "^1.79.2",
         "tailwindcss": "^3.4.12",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.5.9"
     }
 }
