--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@tailwindcss/forms": "^0.5.9"
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/react": "^1.2.0",
+        "@tailwindcss/forms": "^0.5.9",
+        "@vitejs/plugin-react": "^4.3.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
