--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@alpinejs/persist": "^3.14.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^1.2.0",
         "@tailwindcss/forms": "^0.5.9",
         "@vitejs/plugin-react": "^4.3.1",
+        "alpinejs": "^3.14.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     }
