--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-translation-manager": "^0.6.6",
+        "brianium/paratest": "*",
         "inertiajs/inertia-laravel": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
